--- a/src/components/Location/Location.module.scss
+++ b/src/components/Location/Location.module.scss
@@ -1,32 +1,32 @@
 .Location {
-  .BackgroundImage {
-    background-image: url('../../images/bg/ball-return.jpeg');
-    background-size: cover;
-    background-position: center top;
-
-    //@media (min-width: 576px) {
-    //}
-    @media (min-width: 768px) {
-      background-image: url('../../images/bg/ball-return-768.jpeg');
-    }
-    @media (min-width: 992px) {
-      background-image: url('../../images/bg/ball-return-992.jpeg');
-    }
-    @media (min-width: 1200px) {
-      background-image: url('../../images/bg/ball-return-1200.jpeg');
-    }
-    @media (min-width: 1400px) {
-      background-image: url('../../images/bg/ball-return-1400.jpeg');
-    }
-  }
-  .BackgroundShade {
-    background-color: white;
-    opacity: 0.6;
-
-    [data-bs-theme="dark"] & {
-      background-color: black;
-    }
-  }
+  //.BackgroundImage {
+  //  background-image: url('../../images/bg/ball-return.jpeg');
+  //  background-size: cover;
+  //  background-position: center top;
+  //
+  //  //@media (min-width: 576px) {
+  //  //}
+  //  @media (min-width: 768px) {
+  //    background-image: url('../../images/bg/ball-return-768.jpeg');
+  //  }
+  //  @media (min-width: 992px) {
+  //    background-image: url('../../images/bg/ball-return-992.jpeg');
+  //  }
+  //  @media (min-width: 1200px) {
+  //    background-image: url('../../images/bg/ball-return-1200.jpeg');
+  //  }
+  //  @media (min-width: 1400px) {
+  //    background-image: url('../../images/bg/ball-return-1400.jpeg');
+  //  }
+  //}
+  //.BackgroundShade {
+  //  background-color: white;
+  //  opacity: 0.6;
+  //
+  //  [data-bs-theme="dark"] & {
+  //    background-color: black;
+  //  }
+  //}
 
   .Content {
     margin: 0 0.5rem;
